[package]

name = "cgmath"
version = "0.16.1"
authors = ["Brendan Zabarauskas <bjzaba@yahoo.com.au>"]
license = "Apache-2.0"
description = "A linear algebra and mathematics library for computer graphics."

documentation = "https://docs.rs/cgmath"
homepage = "https://github.com/brendanzab/cgmath"
repository = "https://github.com/brendanzab/cgmath"
readme = "README.md"

keywords = ["gamedev", "math", "matrix", "vector", "quaternion"]

[lib]
name = "cgmath"

[features]
default = ["std"]
unstable = []
swizzle = []
std = ["rand/std", "num-traits/std", "approx/std" ]

[dependencies]
approx = { version = "0.2", default_features = false }
mint = { version = "0.5", optional = true }
num-traits = {version = "0.2", default_features = false }
rand = { version = "0.5", default_features = false }
serde = { version = "1.0", features = ["serde_derive"], optional = true }
simd = { version = "0.2", optional = true }

[dev-dependencies]
glium = "0.19"
serde_json = "1.0"
